<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_simple" />


    <Button
        android:id="@+id/open_button"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:backgroundTint="#15959A"
        android:text="@string/open_txt"
        android:textColor="#EDE5E5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/open_votacion"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:backgroundTint="#009688"
        android:onClick="Calcular"
        android:text="@string/total_txt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/title"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:text="@string/title1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#F6F1F1"
        android:textColorHint="#ECE5E5"
        app:layout_constraintEnd_toStartOf="@+id/title2"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="48dp"
        android:text="@string/title2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#F6F0F0"
        android:textColorHint="#E6DBDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img1"
        android:layout_width="155dp"
        android:layout_height="265dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"

        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/parasito" />

    <ImageButton
        android:id="@+id/img2"
        android:layout_width="173dp"
        android:layout_height="265dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:srcCompat="@drawable/scoby" />

</androidx.constraintlayout.widget.ConstraintLayout>